--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
         <div class="container-fluid" style="display: flex;">
             <div style="background-color: rgb(16, 149, 206); margin-left: 10px;">
                 <a class="navbar-brand" href="#" matTooltip="Info about the action"
-                    style="text-align: center; font-family: 'Times New Roman', Times, serif; padding-left: 20px; font-weight: bolder; color: aliceblue;">DemoApp</a>
+                    style="text-align: center; font-family: 'Times New Roman', Times, serif; padding-left: 20px; font-weight: bolder; color: aliceblue; text-shadow: 2px 2px 4px #000000; transition: width 2s, height 4s; transform: rotateZ(10deg); ">DemoApp</a>
             </div>
     
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -21,7 +21,7 @@
             </button>
     
             <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                style="float: right; margin-left: 440px; font-family: 'Times New Roman', Times, serif; font-size: 15px;">
+                style="float: right; margin-left: 270px; font-family: 'Times New Roman', Times, serif; font-size: 15px;">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]={exact:true} href="#">HOME <span class="sr-only">(current)</span></a>
