--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -441,7 +441,7 @@
 
                                     <!-- Modal Header -->
                                     <div class="modal-header bg-info">
-                                        <h4 class="modal-title" style="padding-top: 10px;">Register</h4>
+                                        <h4 class="modal-title" style="padding-top: 10px; font-family:'Times New Roman', Times, serif; font-weight: bold; letter-spacing: 0.1em;">Register</h4>
                                         <button type="button" class="btn-close btn-outline-danger btn-danform-control"
                                             data-bs-dismiss="modal"></button>
                                     </div>
