--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -339,7 +339,7 @@
                                 <div class="card mb-3">
                                     <div class="card-body text-center">
                                         <div> <img [src]="urlFile"
-                                                style="height:136x; width:136px; margin-bottom: 10px;"
+                                                style="height:136px; width:136px; margin-bottom: 10px;"
                                                 class="thumbnail"></div>
                                         <div>
                                             <input hidden type="file" name="file" style="font-size: 0.75rem;" mdbRipple [(ngModel)]="userInfo.file" 
