--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -26,6 +26,115 @@
 
     <hr style="color: antiquewhite;">
 
+    <div class="row" style="text-emphasis-color: white; color: white;">
+        <div class="col-lg-3">
+            <h2 class="footer-head">TEAM</h2>
+            <ul style="margin-left: 40px;">
+                <li>
+                    <a href="Chennai Super Kings">Chennai Super Kings</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Delhi Capitals</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Gujarat Titans</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Kolkata Knight Riders</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Lucknow Super Giants</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Mumbai Indians</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Punjab Kings</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Rajasthan Royals</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Royal Challengers Bengaluru</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Sunrisers Hyderabad</a>
+                </li>
+            </ul>
+        </div>
+        <div class="col-lg-3">
+            <h2>ABOUT</h2>
+                <ul style="margin-left: 40px;">
+                    <li>
+                        <a [routerLink]="['/aboutUs']">About Us</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Anti Corruption Policy</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Anti Doping Policy</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">TUE Application Form</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Anti Discrimination Policy</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Clothing And Equipment Regulations</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Code Of Conduct For Players And Teams Officials</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">News Access Regulations</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Image Use Terms</a>
+                    </li>
+                  
+                </ul>
+        </div>
+        <div class="col-lg-3">
+            <h2>GUIDELINE</h2>
+                <ul style="margin-left: 40px;">
+                    <li>
+                        <a href="Chennai Super Kings">IPL Code Of Conduct For Match Officials</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Brand And Protection Guidelines</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Governing Council</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Match Playing Conditions</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">PMOA Minimum Standard</a>
+                    </li>
+                    <li>
+                        <a href="Chennai Super Kings">Suspect Action Policy</a>
+                    </li>
+                    
+                </ul>
+        </div>
+        <div class="col-lg-3">
+            <h2>CONTACT</h2>
+            <ul style="margin-left: 40px;">
+                <li>
+                    <a href="Chennai Super Kings">Contact Us</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Sponsorship</a>
+                </li>
+                <li>
+                    <a href="Chennai Super Kings">Privacy Policy</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: #110d25;">
         <div class="row">
