--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -8,7 +8,6 @@
     <br>
     <br>
 
-
     <div class="col-sm-12">
 
         <!-- carousel bootstrap slide -->
@@ -24,8 +23,19 @@
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
+
+                    <div class="carousel-content">
+                        <h2 class="ap-video-title col-100 floatLft textTwoLine">Welcome to IPL: Fraser-McGurk announces
+                            his
+                            arrival in style</h2>
+                        <h3 class="ap-date col-100 floatLft d-flex align-items-center">12 Apr, 2024 | 01:35 mins | <img
+                                src="https://www.iplt20.com/assets/images/new-eye-banner.svg" class="mx-2"
+                                style="height: 12px;width:18px" alt="" loading="lazy"> 9k </h3>
+                    </div>
+
                     <img src="https://img.freepik.com/free-psd/technology-banner-template_23-2148928991.jpg?w=996&t=st=1712374611~exp=1712375211~hmac=b0595d5f5d648d0247ce1b80e00d544a3e268124b0edc22f8b375c41969bfa46"
                         alt="Los Angeles" width="1100" height="500">
+
                 </div>
                 <div class="carousel-item">
                     <img src="https://img.freepik.com/free-psd/business-banner-template-design_23-2149188970.jpg?w=996&t=st=1712374944~exp=1712375544~hmac=2f3f0fa38553780c6a2964baed6b530435362d0e7f8f1011f4742032e0329e0c"
@@ -44,6 +54,105 @@
             <a class="carousel-control-next" href="#demo" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
+        </div>
+        <div style="background-color: #10172b; border-bottom-left-radius: 40px; border-bottom-right-radius: 40px;">
+
+            <br>
+            <br>
+            <div class="container">
+
+                <div class="row" style="margin-bottom: 1.5rem !important;">
+                    <h3 style="float: left; color: white; font-style: italic; font-weight: bold;">Good Evening!
+                    </h3>
+                    <span style="float: left; color: white;">Curated shorts for you</span>
+                </div>
+
+                <div class="row" style="border-radius: 15px; border-width: 5px; border-color: white;">
+                    <div class="col-lg-2">
+                        <mat-card class="example-card">
+
+                            <img mat-card-image class="zoom"
+                                src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1712065673_200x200_97348_1712065672.JPG"
+                                alt="Photo of a Shiba Inu">
+
+                            <!-- <mat-card-actions>
+                                <button mat-button>LIKE</button>
+                                <button mat-button>SHARE</button>
+                            </mat-card-actions> -->
+                        </mat-card>
+                    </div>
+                    <div class="col-lg-2">
+                        <mat-card class="example-card">
+
+                            <img mat-card-image class="zoom"
+                                src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1711979814_200x200_77679_1711979814.jpg"
+                                alt="Photo of a Shiba Inu">
+
+                            <!-- <mat-card-actions>
+                                <button mat-button>LIKE</button>
+                                <button mat-button>SHARE</button>
+                            </mat-card-actions> -->
+                        </mat-card>
+                    </div>
+                    <div class="col-lg-2">
+                        <mat-card class="example-card">
+
+                            <img mat-card-image class="zoom"
+                                src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1711892206_200x200_12907_1711892205.jpg"
+                                alt="Photo of a Shiba Inu">
+
+                            <!-- <mat-card-actions>
+                                <button mat-button>LIKE</button>
+                                <button mat-button>SHARE</button>
+                            </mat-card-actions> -->
+                        </mat-card>
+                    </div>
+                    <div class="col-lg-2">
+                        <mat-card class="example-card">
+
+                            <img mat-card-image class="zoom"
+                                src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1711880678_200x200_90334_1711880678.jpg"
+                                alt="Photo of a Shiba Inu">
+
+                            <!-- <mat-card-actions>
+                                <button mat-button>LIKE</button>
+                                <button mat-button>SHARE</button>
+                            </mat-card-actions> -->
+                        </mat-card>
+                    </div>
+                    <div class="col-lg-2">
+                        <mat-card class="example-card">
+
+                            <img mat-card-image class="zoom"
+                                src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1711880678_200x200_90334_1711880678.jpg"
+                                alt="Photo of a Shiba Inu">
+
+                            <!-- <mat-card-actions>
+                                <button mat-button>LIKE</button>
+                                <button mat-button>SHARE</button>
+                            </mat-card-actions> -->
+                        </mat-card>
+                    </div>
+                    <div class="col-lg-2">
+                        <mat-card class="example-card">
+
+                            <img mat-card-image class="zoom"
+                                src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1711719638_200x200_81383_1711719637.JPG"
+                                alt="Photo of a Shiba Inu">
+
+                            <!-- <mat-card-actions>
+                                <button mat-button>LIKE</button>
+                                <button mat-button>SHARE</button>
+                            </mat-card-actions> -->
+                        </mat-card>
+                    </div>
+
+                </div>
+
+            </div>
+            <br>
+            <br>
+
         </div>
 
         <br>
@@ -138,31 +247,6 @@
 
         <br>
         <br>
-
-
-
-        <!-- carousel slide -->
-        <div class="container">
-            <!-- <div class="card">
-                <div class="py-2">
-                    <p-button type="button" icon="pi pi-minus" (click)="prev()"
-                        styleClass="p-button-secondary mr-2"></p-button>
-                    <p-button type="button" icon="pi pi-plus" (click)="next()" styleClass="p-button-primary"></p-button>
-                </div>
-                <p-galleria [(ngModel)]="images" [responsiveOptions]="responsiveOptions"
-                    [containerStyle]="{ 'max-width': '640px' }" [numVisible]="5" [(activeIndex)]="activeIndex">
-                    <ng-template pTemplate="item" let-item>
-                        <img [src]="item.itemImageSrc" style="width: 100%;" />
-                    </ng-template>
-                    <ng-template pTemplate="thumbnail" let-item>
-                        <div class="grid grid-nogutter justify-content-center">
-                            <img [src]="item.thumbnailImageSrc" />
-                        </div>
-                    </ng-template>
-                </p-galleria>
-            </div> -->
-        </div>
-
         <br>
         <br>
         <br>
@@ -171,7 +255,7 @@
         <div style="padding: 0 ;
         background: url(../images/header-curl-bg.svg) right / contain no-repeat, url(../images/header-rotate.png) left / contain no-repeat #19398a;
         box-shadow: 0 4px 8px 0 hsl(0deg 0% 7% / 50%);
-        height: auto;">
+        height: auto; border-bottom-left-radius: 40px; border-top-right-radius: 40px;">
 
             <br>
             <br>
@@ -250,7 +334,7 @@
         <br>
         <br>
 
-        <div style="background-color: #10172b;">
+        <div style="background-color: #10172b; border-bottom-left-radius: 40px; border-bottom-right-radius: 40px;">
 
             <br>
             <br>
@@ -266,7 +350,7 @@
                     <div class="col-lg-2">
                         <mat-card class="example-card">
 
-                            <img mat-card-image class="zoom" 
+                            <img mat-card-image class="zoom"
                                 src="https://bcciplayerimages.s3.ap-south-1.amazonaws.com/bcci/story/1712065673_200x200_97348_1712065672.JPG"
                                 alt="Photo of a Shiba Inu">
 
@@ -369,7 +453,7 @@
                     <div class="col-lg-6">
                         <a href="#" style="float: right; color: white; font-weight: bold; ">See more..</a>
                     </div>
-                    
+
                     <!-- <span style="float: left; color: white;">Curated shorts for you</span> -->
                 </div>
 
@@ -509,6 +593,72 @@
 
         </div>
 
+        <br>
+        <br>
+        <br>
+
+        <div class="bg-light">
+            <div class="container">
+                &nbsp;
+                <div class="row" style="margin-bottom: 1.5rem !important;">
+                    <div class="col-lg-6">
+                        <h3 style="float: left; color: rgb(3, 8, 34); font-weight: bold;">Top Teams ....
+                        </h3>
+                    </div>
+                    <div class="col-lg-6">
+                        <a (click)="toggleRemainingImages()" *ngIf="images.length > 4"
+                            style="float: right; color: rgb(3, 8, 34); font-weight: bold; ">
+                            {{ showRemainingImages ? 'Hide' : 'See More' }}
+                        </a>
+                    </div>
+
+                </div>
+
+                <!-- Toggle button for remaining images -->
+                <!-- <div class="row">
+                    <button class="btn-info" (click)="toggleRemainingImages()" *ngIf="images.length > 4">
+                        {{ showRemainingImages ? 'Hide' : 'See More' }}
+                    </button>
+                </div> -->
+
+                <div class="row" style="background-color: #10172b;">
+                    <!-- Display first few images -->
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-2" *ngFor="let image of images.slice(0, 6)">
+                                <mat-card class="example-card">
+                                    <img mat-card-image class="zoom" [src]="image.url"
+                                        style="width: 150px; height: 150px; border: 2px solid #051131; " alt="Image">
+                                </mat-card>
+                            </div>
+                        </div>
+                        &nbsp;
+                    </div>
+
+                    <!-- Display remaining images if showRemainingImages is true -->
+                    <div class="row" *ngIf="showRemainingImages">
+                        <div class="col-lg-12">
+                            <br>
+                            <div class="row">
+                                <div class="col-lg-2" *ngFor="let image of images.slice(4)">
+                                    <mat-card class="example-card">
+                                        <img mat-card-image class="zoom" [src]="image.url"
+                                            style="width: 150px; height: 150px; border: 2px solid #051131; "
+                                            alt="Image">
+                                    </mat-card>
+
+                                </div>
+                            </div>
+                        </div>
+                        &nbsp;
+
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
 
