--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -69,3 +69,22 @@
 /* * {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 } */
+
+a{
+  color: rgba(255, 255, 255, .6); 
+  font-family: 'Times New Roman', Times, serif; 
+  letter-spacing: 0.07em;
+  text-align: left;
+  margin-bottom: 40px;
+  text-decoration: none;  
+
+}
+
+ul, li{
+  text-align: left;
+  outline-offset: opx;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  list-style-type: none;
+}
