--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,4 @@
+
 .gradient-custom {
     /* fallback for old browsers */
     background: #f093fb;
@@ -24,9 +25,14 @@
     font-family: "Times New Roman", Times, serif;
 }
 
-/* .navbar{
-    background-color:#0dcaf0 ;
-}  */
+/* navbar */
+
+.nav-item.active .nav-link:hover {
+    border-top: 1px solid blue;
+    size: 5px;
+    /* Adjust the color and thickness as needed */
+}
+
 
 .navbar-nav .nav-link.active,
 .navbar-nav .nav-link.show {
@@ -36,7 +42,21 @@
     text-decoration-color: white;
 }
 
+/* .container-fluid {
+    margin-top: 56px;
+    Adjust this margin to account for the fixed navbar height
+} */
+
 .navbar {
+
+    position: fixed;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    padding-left: 20px;
+    z-index: 1000;
+    /* Ensure the navbar appears above other content */
+
     background-color: var(--navbar-scroll);
     transition: background-color 1s ease;
     /* transition: background-color 1s rgb(24, 149, 216); */
@@ -56,3 +76,79 @@ a {
 }
 
 
+.site-navbar .site-navigation .site-menu .has-children {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+}
+
+
+/* dropdown menu */
+.dropdown {
+    position: relative;
+    display: inline-block;
+
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 4px;
+    z-index: 1;
+    border-radius: 4px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    text-align: left;
+    border-radius: 4px;
+    padding: 10px;
+}
+
+.dropdown:hover .dropdown-content .dropdown:hover a {
+    background-color: rgb(187, 73, 12);
+    padding: 10px 16px;
+    color: white;
+    font-weight: bold;
+    font-style: italic;
+    text-align: center;
+}
+
+.dropdown li {
+    list-style: none;
+    /* padding: 4px 16px; */
+    margin: 0;
+    min-width: 240px;
+    border-radius: 4px;
+    border-bottom: 1px solid rgba(217, 217, 217, .4);
+}
+
+.dropdown li a {
+    border-radius: 8px 4px;
+}
+
+
+/* icon style upword downword */
+/* Styling for the arrow icon */
+.arrow-icon {
+    display: inline-block;
+    margin-left: 5px;
+    /* Adjust spacing as needed */
+    transition: transform 0.3s ease;
+}
+
+/* Styling for the rotated icon */
+.dropdown-content {
+    display: none;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown.active .arrow-icon {
+    transform: rotate(180deg);
+}
