--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -5,6 +5,38 @@
     <br>
     <br>
     <br>
+    <br>
+    <br>
+    <!-- image table upload -->
+    <div class="bg-light">
+
+        &nbsp;
+        <div class="container-fluid">
+            <input type="file" (change)="onFileSelected($event)">
+            <button class="btn-info" (click)="onUpload()">Upload</button>
+        </div>
+
+
+        <div class="col-lg-12">
+            <br>
+
+            <div class="row">
+                <br>
+                <br>
+                <div class="col-lg-2" *ngFor="let image of images; let i = index; let last = last;">
+                    <img [src]="image.url" style="width: 190px; height: 190px; border-radius: 5px; margin-bottom: 5px;"
+                        alt="Image">
+                </div>
+
+            </div>
+        </div>
+        &nbsp;
+
+    </div>
+
+    <br>
+    <br>
+
 
     <div class="bg-light">
 
@@ -34,7 +66,7 @@
 
                                     <div class="card mb-3">
                                         <div class="card-body text-center">
-                                            <div> <img [src]="urlFile"
+                                            <div> <img [src]="docurll"
                                                     style="height:250px; width:200px; margin-right: 20px; margin-bottom: 10px;"
                                                     class="thumbnail"></div>
                                             <div>
@@ -137,13 +169,13 @@
 
                                     <div class="card mb-3">
                                         <div class="card-body text-center">
-                                            <div> <img [src]="urlFile"
-                                                    style="height:250px; width:200px; margin-bottom: 10px; border-radius: 10px;"
+                                            <div> <img [src]="docurll"
+                                                    style="height:234px; width:200px; margin-bottom: 10px; border-radius: 10px;"
                                                     class="thumbnail"></div>
                                             <div>
-                                                <input hidden type="file" name="file" style="font-size: 0.75rem;" [(ngModel)]="userInfo.file"  mdbRipple
-                                                    rippleColor="dark" #profileUpload
-                                                    (change)="onChangeFileField($event)" />
+                                                <input hidden type="file" name="file" style="font-size: 0.75rem;"
+                                                    [(ngModel)]="file" mdbRipple rippleColor="dark"
+                                                    #profileUpload (change)="onChangeFileField($event)" />
                                                 <button type="button" class="btn btn-primary btn-sm"
                                                     (click)="profileUpload.click()">Edit photo</button>
 
@@ -156,7 +188,7 @@
                                     <div class="card mb-4">
                                         <div class="card-body" style="font-weight: bolder;">
 
-                                            <div class="row" >
+                                            <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">First Name</p>
                                                 </div>
@@ -166,7 +198,7 @@
                                                         placeholder="First name" required />
                                                 </div>
                                             </div>
-                                            <hr>
+                                            &nbsp;
                                             <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Last Name</p>
@@ -177,18 +209,18 @@
                                                         placeholder="Last Name" required />
                                                 </div>
                                             </div>
-                                            <hr>
+                                            &nbsp;
                                             <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Email Id</p>
                                                 </div>
                                                 <div class="col-sm-9">
                                                     <input type="text" class="form-control form-control-sm"
-                                                        [(ngModel)]="userInfo.emailId" name="url" placeholder="Email-id"
+                                                        [(ngModel)]="userInfo.email" name="email" placeholder="Email-id"
                                                         required />
                                                 </div>
                                             </div>
-                                            <hr>
+                                            &nbsp;
                                             <div class="row">
                                                 <div class="col-sm-3">
                                                     <p class="mb-0">Mobile Number</p>
@@ -199,6 +231,7 @@
                                                         placeholder="Mobile Number" required />
                                                 </div>
                                             </div>
+                                            &nbsp;
                                             <hr>
                                             <div class="row">
                                                 <div class="col-lg-12" style="margin-left: 540px;">
@@ -240,7 +273,7 @@
 
                                 <div class="card mb-3">
                                     <div class="card-body text-center">
-                                        <div> <img [src]="urlFile"
+                                        <div> <img [src]="docurll"
                                                 style="height:215px; width:200px; margin-right: 20px; margin-bottom: 10px;"
                                                 class="thumbnail"></div>
                                         <div>
@@ -335,24 +368,22 @@
 
                         <div class="row">
                             <div class="col-xl-4">
+                                <div> <img [src]="docurll" style="height:100px; width:100px; border-radius: 10px;"
+                                        class="thumbnail">
+                                </div>
+                                <div>
 
-                                <div class="card mb-3">
-                                    <div class="card-body text-center">
-                                        <div> <img [src]="urlFile"
-                                                style="height:136px; width:136px; margin-bottom: 10px;"
-                                                class="thumbnail"></div>
-                                        <div>
-                                            <input hidden type="file" name="file" style="font-size: 0.75rem;" mdbRipple [(ngModel)]="userInfo.file" 
-                                                rippleColor="dark" #profileUpload
-                                                (change)="onChangeFileField($event)" />
-                                            <button type="button" class="btn btn-primary btn-sm"
-                                                (click)="profileUpload.click()">Edit photo</button>
-
-                                            <button [routerLink]="['/updateUsertable',userInfo.id]" type="button"
-                                                class="btn btn-info btn-sm" style="margin-left: 10px;">Edit
-                                                profile</button>
+                                    <input hidden type="file" style="font-size: 0.75rem;" mdbRipple
+                                        [(ngModel)]="file" name="file" rippleColor="dark" #profileUpload
+                                        (change)="onChangeFileField($event)" />
+                                    <button type="button" class="btn btn-primary btn-sm"
+                                        (click)="profileUpload.click()">Edit photo</button>
+                                    <div [ngClass]="{ 'is-invalid':file.dirty && file.touched && file.errors }"
+                                        class="invalid-feedback">
+                                        <div *ngIf="file.errors?.['required']">Please upload you photo
                                         </div>
                                     </div>
+
                                 </div>
 
                             </div>
@@ -360,6 +391,7 @@
                             <div class="col-lg-8">
                                 <div class="card mb-4">
                                     <div class="card-body" style="font-weight: bolder;">
+                                        <hr>
                                         <div class="row">
                                             <div class="col-sm-3">
                                                 <p class="mb-0">Name</p>
@@ -368,16 +400,16 @@
                                                 <p class="text-muted mb-0">{{userInfo.fname}} {{userInfo.lname}}</p>
                                             </div>
                                         </div>
-                                        <hr>
+                                        &nbsp;
                                         <div class="row">
                                             <div class="col-sm-3">
                                                 <p class="mb-0">Email-Id</p>
                                             </div>
                                             <div class="col-sm-9">
-                                                <p class="text-muted mb-0">{{userInfo.emailId}}</p>
+                                                <p class="text-muted mb-0">{{userInfo.email}}</p>
                                             </div>
                                         </div>
-                                        <hr>
+                                        &nbsp;
                                         <div class="row">
                                             <div class="col-sm-3">
                                                 <p class="mb-0">Mobile number</p>
@@ -386,7 +418,7 @@
                                                 <p class="text-muted mb-0">{{userInfo.mno}}</p>
                                             </div>
                                         </div>
-                                        <hr>
+                                        &nbsp;
                                         <div class="row">
                                             <div class="col-sm-3">
                                                 <p class="mb-0">Country</p>
@@ -395,6 +427,7 @@
                                                 <p class="text-muted mb-0">{{userInfo.country}}</p>
                                             </div>
                                         </div>
+                                        <hr>
                                     </div>
                                 </div>
                             </div>
@@ -462,7 +495,7 @@
                         <tr *ngFor="let data of datas;" class="animated flipInX">
                             <td>{{data.id}}</td>
                             <td>{{data.fname}} {{data.lname}}</td>
-                            <td>{{data.emailId}}</td>
+                            <td>{{data.email}}</td>
                             <td>{{data.mno}} </td>
                             <td><img class="thumbnail" style="height: 50px; width: 50px;" [src]="data.file" /></td>
                             <td>
@@ -474,7 +507,8 @@
 
                                 <a [routerLink]="['/updateUsertable',data.id]" tabindex="-1"
                                     style="margin-right: 5px; margin-top: 10px;"><button type="button"
-                                        class="btn btn-info btn-sm" data-mdb-ripple-init><i class="fa fa-edit"></i>Edit</button></a>
+                                        class="btn btn-info btn-sm" data-mdb-ripple-init><i
+                                            class="fa fa-edit"></i>Edit</button></a>
 
                                 <button class="btn btn-danger btn-sm" title="Delete category"
                                     style="margin-right: 5px;  width: 50px; height: 30px;"
@@ -488,7 +522,70 @@
                 </table>
             </div>
         </div>
-        
+
+        <br>
+        <br>
+
+        <!--Manage data mat table -->
+        <div *ngIf="!flag">
+            <div class="mt-4 pl-1 p-5 bg-light text-white rounded">
+                <mat-form-field>
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Id, Name, Email-Id" #input>
+                </mat-form-field>
+                <table class="table align-middle mb-0 bg-white" mat-table [dataSource]="dataSource">
+
+                    <!-- Table columns -->
+                    <ng-container matColumnDef="id">
+                        <th mat-header-cell *matHeaderCellDef>ID</th>
+                        <td mat-cell *matCellDef="let data">{{ data.id }}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef>Name</th>
+                        <td mat-cell *matCellDef="let data">{{data.fname}} {{data.lname}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="email">
+                        <th mat-header-cell *matHeaderCellDef>Email-Id</th>
+                        <td mat-cell *matCellDef="let data">{{data.email}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="mno">
+                        <th mat-header-cell *matHeaderCellDef>Mobile No.</th>
+                        <td mat-cell *matCellDef="let data">{{ data.mno }}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="image">
+                        <th mat-header-cell *matHeaderCellDef>Image</th>
+                        <td mat-cell *matCellDef="let data"><img class="thumbnail" style="height: 50px; width: 50px;"
+                                [src]="data.file" /></td>
+                    </ng-container>
+                    <ng-container matColumnDef="action">
+                        <th mat-header-cell *matHeaderCellDef>Action</th>
+                        <td mat-cell *matCellDef="let data">
+                            <a [routerLink]="['/detailUsertable',data.id]" tabindex="-1"
+                                style="margin-right: 10px; margin-bottom: 10px; padding-bottom: 10px;"><button
+                                    type="button" class="btn btn-primary btn-sm" data-mdb-ripple-init>View</button></a>
+
+                            <a [routerLink]="['/updateUsertable',data.id]" tabindex="-1"
+                                style="margin-right: 5px; margin-top: 10px;"><button type="button"
+                                    class="btn btn-info btn-sm" data-mdb-ripple-init><i
+                                        class="fa fa-edit"></i>Edit</button></a>
+
+                            <button class="btn btn-danger btn-sm" title="Delete category"
+                                style="margin-right: 5px;  width: 50px; height: 30px;"
+                                (click)="deleteRole(data.id)">Delete
+                                <span class="glyphicon glyphicon-remove-circle"></span>
+                            </button>
+                        </td>
+                    </ng-container>
+                    <!-- Define other columns similarly -->
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+            </div>
+        </div>
+
     </div>
 
     <br>
@@ -498,3 +595,5 @@
 
     <app-footer></app-footer>
 </div>
+
+<script defer="" src="https://www.iplt20.com/assets/js/ipl-custom.min.js?v=1.7.11"></script>
