--- a/src/app/demo-app/demo-app.component.html
+++ b/src/app/demo-app/demo-app.component.html
@@ -263,7 +263,7 @@
             </div>
         </div>
 
-        <mat-dialog-actions align="end">
+        <!-- <mat-dialog-actions align="end">
 
             <div class="modal-footer">
     
@@ -282,12 +282,12 @@
     
                 </div>
             </div>
-            <!-- <button mat-button mat-dialog-close>Cancel</button>
-            <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button> -->
-        </mat-dialog-actions>
+            <button mat-button mat-dialog-close>Cancel</button>
+            <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Install</button>
+        </mat-dialog-actions> -->
 
         <!-- Modal footer -->
-        <!-- <div class="modal-footer">
+        <div class="modal-footer">
 
             <div class="col-lg-5">
                 <div class="row">
@@ -303,7 +303,7 @@
                 </div>
 
             </div>
-        </div> -->
+        </div>
 
     </mat-dialog-content>
 
