--- a/src/app/forms/reactive-form/reactive-form.component.html
+++ b/src/app/forms/reactive-form/reactive-form.component.html
@@ -1,8 +1,12 @@
 <div class="container-fluid">
     <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <app-header></app-header>
     
-    <section class="vh-30 bg-image" style="background-color: #eee;">
+    <section class="vh-30 bg-image" style="background-color: #eee; padding-top: 50px;">
         <div class="mask d-flex align-items-center h-50 gradient-custom-2">
 
             <div class="container h-70">
