--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
         <div class="container-fluid" style="display: flex;">
             <div style="background-color: rgb(16, 149, 206); margin-left: 0px;">
                 <a class="navbar-brand" href="#" matTooltip="Info about the action"
-                    style="text-align: center; font-family: 'Times New Roman', Times, serif; padding-left: 10px; font-weight: bolder; color: aliceblue; text-shadow: 2px 2px 4px #000000; transition: width 2s, height 4s; transform: rotateZ(-10deg); ">DemoApp</a>
+                    style="text-align: center; font-family: 'Times New Roman', Times, serif; padding-left: 10px; font-weight: bolder; color: yellow; text-shadow: 2px 2px 4px #000000; transition: width 2s, height 4s; transform: rotateZ(-10deg); ">match Up2date</a>
             </div>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
