--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -6,7 +6,6 @@
     <br>
     <br>
     <br>
-    <br>
 
     <div class="col-sm-12">
 
@@ -159,6 +158,13 @@
         <br>
         <br>
 
+        <!-- ipl match schedule table -->
+        <app-matchsche-table></app-matchsche-table>
+
+        <br>
+        <br>
+        <br>
+
         <div style="background-color: #a80b8b22;">
 
             <br>
@@ -269,7 +275,7 @@
                                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <iframe class="responsive-iframe" style="border-radius: 10px;"
-                                        src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                    src="https://www.iplt20.com/4322d75d-077b-4074-abf6-a732c3226dee" allowfullscreen></iframe>
                                 </div>
                                 <div>
                                     <a href="#" class="card-link">Card link</a>
