--- a/src/app/angular-mat-table/angular-mat-table.component.html
+++ b/src/app/angular-mat-table/angular-mat-table.component.html
@@ -12,6 +12,11 @@
     <br>
     
     
+    <br>
+    <br>
+    <br>
+
+    <!-- angular mat table -->
     <div class="mat-elevation-z6">
         <table mat-table [dataSource]="dataSource">
 
