--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,13 +9,12 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
+        
 
         <div class="container-fluid" style="display: flex;">
             <div style="background-color: rgb(16, 149, 206); margin-left: 0px;">
                 <a class="navbar-brand" href="#" matTooltip="Info about the action"
-                    style="text-align: center; font-family: 'Times New Roman', Times, serif; padding-left: 10px; font-weight: bolder; color: yellow; text-shadow: 2px 2px 4px #000000; transition: width 2s, height 4s; transform: rotateZ(-10deg); ">match Up2date</a>
+                    style="text-align: center; font-family: 'Times New Roman', Times, serif; padding-left: 10px; font-weight: bolder; color: yellow; text-shadow: 2px 2px 4px #000000; transition: width 2s, height 4s; transform: rotateZ(-10deg); background-color: red;">match Up2date</a>
             </div>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -24,7 +23,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                style="float: right; margin-left: 300px; font-family: 'Times New Roman', Times, serif; font-size: 15px;">
+                style="float: right; margin-left: 270px; font-family: 'Times New Roman', Times, serif; font-size: 15px;">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]={exact:true}
